--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,19 @@
 title: SoloDevelopment
+description: A community for solo game developers
 baseurl: ""
 url: "https://solodevelopmentcommunity.github.io"
+
+# Build settings
+markdown: kramdown
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+  - jekyll-remote-theme
+  - jekyll-feed
+
+# Exclude from processing
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor
+  - .git/
